# paperless-agentic

./: .gitignore  GEMINI.md  LICENSE  Makefile  pyproject.toml  readme.md
agents/paperless-orchestrator/: .env.example  .gitignore  README.md  pyproject.toml
agents/paperless-orchestrator/deployment/: backup.py
agents/paperless-orchestrator/paperless_orchestrator_agent/: __init__.py  agent.py  config.py  prompts.py
agents/paperless-orchestrator/paperless_orchestrator_agent/tools/: document_analyzer.py  file_manager.py  paperless_api.py
agents/paperless-orchestrator/paperless_orchestrator_agent/tools/tests/: paperless_api.py
infra/: docker-compose.yml
src/paperless_app/: adk_service.py  app.py  config.py
src/paperless_app/agent/: definition.py  prompts.py
src/paperless_app/agent/tools/: __init__.py  document_analyzer.py  file_manager.py  paperless_api.py
